css/main.css
body{
  overflow-x: hidden;
}

header, .download, .features, .overlay, .contact .bg-primary{
  overflow-x: hidden!important;
  overflow-y: hidden!important;
}

.bg-primary{
  padding: 0!important;
}

.how_to_work{
  font-weight: bold;
  font-size: 40px;
  padding-bottom: 25px;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.7);
}

.features{
  padding-top: 100px;
  padding-bottom: 30px;
}

#mainNav{
  color: #fff;
  padding: 10px;
}

.contact{
  background-color: #fdcc52;
}

.navbar .navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top;
}

.navbar .navbar-collapse {
  text-align: center;
}

.navbar-nav li{
  padding-left: 10px;
  padding-right: 10px;
}

.female, .male{
  font-size: 12px;
}

.female{
  color: #EE82EE;
}

.male{
  color: green;
}

header{
  background: url('../img/banner.png') center no-repeat fixed;
  background-size: cover;
}

.block_header{
  height: 500px;
  margin-top: 200px;
}

.block_midle{
  height: 250px;
}

.block_midle h3{
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.block_midle p{
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.bg-primary{
  padding: 50px;
}

.circle-icon{
  background-color: #fff;
  width: 80px;
  height: 80px;
  margin: 0 auto;
  border-radius: 50%;
  padding-top: 15px;
  margin-bottom: 20px;
}

.fa-pencil, .fa-weixin, .fa-heart, .fa-money{
  color: #000;
  font-size: 50px;
  padding-top: 0;
}

.float-lft{
  float: left;
}

.float-rgt{
  float: right;
}

.navbar-nav .fa-facebook, .navbar-nav .fa-instagram, .navbar-nav .fa-twitter{
  font-size: 20px;
}

.block_sign{
  padding-top: 10%;
  text-align: center;
  padding-bottom: 20px;
}

.btn_sign_in{
  margin: 0 auto;
}

.bg-primary .row{
  padding-bottom: 50px;
}

.download{
  padding: 10px!important;
}

.chatmessage{
  padding:20px!important;
  background-color: #ccc;
  background: url('../img/background_text.png') fixed no-repeat;
  background-size: cover;
}

.advantage{
  color: #42cce6;
  font-weight: bold;
  text-shadow: 1px 1px 1px #000;
}

#banner_bottom{
  height: auto;
  width: 100%;
  padding-top: 60px;
  padding-bottom: 200px;
  padding-left: 250px;
  padding-right: 250px;
  text-align: center;
  background: url('../img/background_bottom.png') no-repeat;
  background-size: cover;
}

#banner_bottom h3{
  margin-bottom: 100px;
}

.text-chat{
  margin-left: 1px;
  background-color: #fff;
  padding: 12px;
  border-radius: 20px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
}

.WhoAreWe{
  height: auto;
  width: 100%;
  padding-left: 80px;
  padding-right: 80px;
  padding-top: 40px;
  padding-bottom: 40px;
}

.WhoAreWe h2{
  text-align: center;
  margin-bottom: 15px;
}

.conversarion{
  margin-bottom: 5px;
  padding: 10px;
}

#features{
  background: url('../img/background_text.png') fixed;
}

#features .text-left ul li {
  font-size: 18px;
}

footer{
  background-color: #DCDCDC;
  background: url('../img/background_bottom.png') fixed;
  color: #1aa29b;
}

footer ul li a{
  color: #1aa29b;
  font-size: 20px;
}

@media screen and (max-width: 768px) {
  header{
    padding: 0!important;
  }

  .WhoAreWe{
    padding: 15px;
  }
}

/* Congrats Page */

.congrats_page{
  height: auto;
  width: 80%;
  background-color: #fff;
  margin: 0 auto;
  margin-top: 150px;
  margin-bottom: 150px;
  background: rgba(0, 0, 0, 0.2);
  text-align: center;
  border-radius: 10px;
  padding: 40px;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.fa-plus{
  font-size: 90px;
  margin-top: 85px;
}

.congrats_page h2{
  color: #fff;
  font-size: 80px;
  font-family: 'Nunito', sans-serif;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
}

.congrats_page .img_piggy{
  margin-top: 80px;
}

